<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.geomex.near.MainActivity">

    <item
        android:id="@+id/action_overflow"
        android:icon="@drawable/ic_action_overflow"
        android:title="@string/action_overflow"
        android:orderInCategory="1"
        app:showAsAction="always">

        <menu>

            <item
                android:id="@+id/action_contact"
                android:title="@string/action_contact"
                android:orderInCategory="98"
                app:showAsAction="never" />

            <item
                android:id="@+id/action_logout"
                android:title="@string/action_logout"
                android:orderInCategory="99"
                app:showAsAction="never" />

        </menu>
    </item>
</menu>
